Archive2/cd/3e4905d65c75bd/output
main.cpp:15:18: error: non-const lvalue reference to type 'basic_string<[3 * ...]>' cannot bind to a temporary of type 'basic_string<[3 * ...]>'
    std::string& not_fine = bar(s) ; // *** error *** reference to non-const can't bind to a temporary object 
                 ^          ~~~~~~
1 error generated.
